--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.2.1:
+	* fix stray const, preventing functioning on IE
+
+
 0.1.1:
 	* new assertion format supported in vep - tilde's seperating different JWS structures
 
